# isp_pipeline_cpp_learning

./: CMakeLists.txt  ReadMe.md  main.cpp
include/: Image.h  isp_pipeline.h  raw_image.h
include/modules/: black_level.h  demosaic.h  noise_reduction.h  white_balance.h
src/: Image.cpp  isp_pipeline.cpp  raw_image.cpp
src/modules/: black_level.cpp  demosaic.cpp  noise_reduction.cpp  white_balance.cpp
